Added a new navigation bar item 'About Us'

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="">Occasions</a>
         <a href="">Locations</a>
         <a href="">Contact</a>
+        <a href="">About Us</a>
     </nav>
 
     <main>
