--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     
         <p>Gift giving is part of the culture no matter where you are and no matter how long you stay!</p>
         <p>Get that perfect-gift gasp every time!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In deleniti impedit minima nemo aspernatur voluptates et nisi officiis enim asperiores non, mollitia sed rerum molestiae soluta earum veritatis dolor deserunt!</p>
         <p>Thoughtfully crafted with a few of our favourite items, we've got a box for everyone on your list. Find the perfect gift for all your loved ones this Fall Season. To make everyone feel happy!</p>
     
     </main>
